src/test/ui/associated-types/point-at-type-on-obligation-failure-2.stderr
error[E0277]: the trait bound `bool: Bar` is not satisfied
  --> $DIR/point-at-type-on-obligation-failure-2.rs:8:5
   |
LL |     type Assoc: Bar;
   |                 --- required by this bound in `Foo::Assoc`
...
LL |     type Assoc = bool;
   |     ^^^^^^^^^^^^^^^^^^ the trait `Bar` is not implemented for `bool`

error[E0277]: the trait bound `bool: Bar` is not satisfied
  --> $DIR/point-at-type-on-obligation-failure-2.rs:19:5
   |
LL |     Self::Assoc: Bar,
   |                  --- required by this bound in `Baz::Assoc`
LL | {
LL |     type Assoc;
   |          ----- required by a bound in this
...
LL |     type Assoc = bool;
   |     ^^^^^^^^^^^^^^^^^^ the trait `Bar` is not implemented for `bool`

error[E0277]: the trait bound `bool: Bar` is not satisfied
  --> $DIR/point-at-type-on-obligation-failure-2.rs:30:5
   |
LL |     <Self as Bat>::Assoc: Bar,
   |                           --- required by this bound in `Bat::Assoc`
LL | {
LL |     type Assoc;
   |          ----- required by a bound in this
...
LL |     type Assoc = bool;
   |     ^^^^^^^^^^^^^^^^^^ the trait `Bar` is not implemented for `bool`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
